gen/Grammar/DelphiParser.java
// Generated from /home/tr446/Code/grad/COP5556/PLP_PROJECT_P1/src/Grammar/Delphi.g4 by ANTLR 4.13.2
package Grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class DelphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ABSTRACT=1, AND=2, ARRAY=3, BEGIN=4, BOOLEAN=5, CASE=6, CHAR=7, CHR=8, 
		CONST=9, CONSTRUCTOR=10, CLASS=11, DESTRUCTOR=12, DIV=13, DO=14, DOWNTO=15, 
		ELSE=16, END=17, FILE=18, FOR=19, FUNCTION=20, GOTO=21, IF=22, IN=23, 
		INTEGER=24, LABEL=25, MOD=26, NIL=27, NOT=28, OF=29, OR=30, PACKED=31, 
		PROCEDURE=32, PROGRAM=33, PRIVATE=34, PROTECTED=35, PUBLIC=36, PUBLISHED=37, 
		REAL=38, RECORD=39, REPEAT=40, SEALED=41, SET=42, THEN=43, TO=44, TYPE=45, 
		UNTIL=46, VAR=47, WHILE=48, WITH=49, PLUS=50, MINUS=51, STAR=52, SLASH=53, 
		ASSIGN=54, COMMA=55, SEMI=56, COLON=57, EQUAL=58, NOT_EQUAL=59, LT=60, 
		LE=61, GE=62, GT=63, LPAREN=64, RPAREN=65, LBRACK=66, LBRACK2=67, RBRACK=68, 
		RBRACK2=69, POINTER=70, AT=71, DOT=72, DOTDOT=73, LCURLY=74, RCURLY=75, 
		UNIT=76, INTERFACE=77, USES=78, STRING=79, IMPLEMENTATION=80, TRUE=81, 
		FALSE=82, WS=83, COMMENT_1=84, COMMENT_2=85, IDENT=86, STRING_LITERAL=87, 
		NUM_INT=88, NUM_REAL=89;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_identifier = 2, RULE_topLevelBlock = 3, 
		RULE_expandedTypeDefinitionPart = 4, RULE_expandedTypeDefinition = 5, 
		RULE_classType = 6, RULE_anscestor = 7, RULE_classDefinition = 8, RULE_primaryFieldDeclarationPart = 9, 
		RULE_memberListPart = 10, RULE_accessSpecifier = 11, RULE_methodPrototype = 12, 
		RULE_procedurePrototype = 13, RULE_constructorPrototype = 14, RULE_destructorPrototype = 15, 
		RULE_functionPrototype = 16, RULE_classFieldDeclarationPart = 17, RULE_interfaceType = 18, 
		RULE_interfaceGuid = 19, RULE_usesUnitsPart = 20, RULE_labelDeclarationPart = 21, 
		RULE_label = 22, RULE_constantDefinitionPart = 23, RULE_constantDefinition = 24, 
		RULE_constantChr = 25, RULE_constant = 26, RULE_unsignedNumber = 27, RULE_unsignedInteger = 28, 
		RULE_unsignedReal = 29, RULE_sign = 30, RULE_bool_ = 31, RULE_string = 32, 
		RULE_typeDefinitionPart = 33, RULE_typeDefinition = 34, RULE_functionType = 35, 
		RULE_procedureType = 36, RULE_type_ = 37, RULE_simpleType = 38, RULE_scalarType = 39, 
		RULE_subrangeType = 40, RULE_typeIdentifier = 41, RULE_structuredType = 42, 
		RULE_unpackedStructuredType = 43, RULE_stringtype = 44, RULE_arrayType = 45, 
		RULE_typeList = 46, RULE_indexType = 47, RULE_componentType = 48, RULE_recordType = 49, 
		RULE_fieldList = 50, RULE_fixedPart = 51, RULE_recordSection = 52, RULE_variantPart = 53, 
		RULE_tag = 54, RULE_variant = 55, RULE_setType = 56, RULE_baseType = 57, 
		RULE_fileType = 58, RULE_pointerType = 59, RULE_variableDeclarationPart = 60, 
		RULE_variableDeclaration = 61, RULE_procedureAndFunctionDeclarationPart = 62, 
		RULE_procedureOrFunctionDeclaration = 63, RULE_block = 64, RULE_procedureDeclaration = 65, 
		RULE_methodDeclaration = 66, RULE_constructorDeclaration = 67, RULE_destructorDeclaration = 68, 
		RULE_formalParameterList = 69, RULE_formalParameterSection = 70, RULE_parameterGroup = 71, 
		RULE_identifierList = 72, RULE_constList = 73, RULE_functionDeclaration = 74, 
		RULE_resultType = 75, RULE_statement = 76, RULE_unlabelledStatement = 77, 
		RULE_simpleStatement = 78, RULE_assignmentStatement = 79, RULE_variable = 80, 
		RULE_expression = 81, RULE_relationaloperator = 82, RULE_simpleExpression = 83, 
		RULE_additiveoperator = 84, RULE_term = 85, RULE_multiplicativeoperator = 86, 
		RULE_signedFactor = 87, RULE_factor = 88, RULE_unsignedConstant = 89, 
		RULE_functionDesignator = 90, RULE_parameterList = 91, RULE_set_ = 92, 
		RULE_elementList = 93, RULE_element = 94, RULE_procedureStatement = 95, 
		RULE_actualParameter = 96, RULE_parameterwidth = 97, RULE_gotoStatement = 98, 
		RULE_emptyStatement_ = 99, RULE_empty_ = 100, RULE_structuredStatement = 101, 
		RULE_compoundStatement = 102, RULE_statements = 103, RULE_conditionalStatement = 104, 
		RULE_ifStatement = 105, RULE_caseStatement = 106, RULE_caseListElement = 107, 
		RULE_repetetiveStatement = 108, RULE_whileStatement = 109, RULE_repeatStatement = 110, 
		RULE_forStatement = 111, RULE_forList = 112, RULE_initialValue = 113, 
		RULE_finalValue = 114, RULE_withStatement = 115, RULE_recordVariableList = 116, 
		RULE_methodCall = 117, RULE_access = 118;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "identifier", "topLevelBlock", "expandedTypeDefinitionPart", 
			"expandedTypeDefinition", "classType", "anscestor", "classDefinition", 
			"primaryFieldDeclarationPart", "memberListPart", "accessSpecifier", "methodPrototype", 
			"procedurePrototype", "constructorPrototype", "destructorPrototype", 
			"functionPrototype", "classFieldDeclarationPart", "interfaceType", "interfaceGuid", 
			"usesUnitsPart", "labelDeclarationPart", "label", "constantDefinitionPart", 
			"constantDefinition", "constantChr", "constant", "unsignedNumber", "unsignedInteger", 
			"unsignedReal", "sign", "bool_", "string", "typeDefinitionPart", "typeDefinition", 
			"functionType", "procedureType", "type_", "simpleType", "scalarType", 
			"subrangeType", "typeIdentifier", "structuredType", "unpackedStructuredType", 
			"stringtype", "arrayType", "typeList", "indexType", "componentType", 
			"recordType", "fieldList", "fixedPart", "recordSection", "variantPart", 
			"tag", "variant", "setType", "baseType", "fileType", "pointerType", "variableDeclarationPart", 
			"variableDeclaration", "procedureAndFunctionDeclarationPart", "procedureOrFunctionDeclaration", 
			"block", "procedureDeclaration", "methodDeclaration", "constructorDeclaration", 
			"destructorDeclaration", "formalParameterList", "formalParameterSection", 
			"parameterGroup", "identifierList", "constList", "functionDeclaration", 
			"resultType", "statement", "unlabelledStatement", "simpleStatement", 
			"assignmentStatement", "variable", "expression", "relationaloperator", 
			"simpleExpression", "additiveoperator", "term", "multiplicativeoperator", 
			"signedFactor", "factor", "unsignedConstant", "functionDesignator", "parameterList", 
			"set_", "elementList", "element", "procedureStatement", "actualParameter", 
			"parameterwidth", "gotoStatement", "emptyStatement_", "empty_", "structuredStatement", 
			"compoundStatement", "statements", "conditionalStatement", "ifStatement", 
			"caseStatement", "caseListElement", "repetetiveStatement", "whileStatement", 
			"repeatStatement", "forStatement", "forList", "initialValue", "finalValue", 
			"withStatement", "recordVariableList", "methodCall", "access"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'ABSTRACT'", "'AND'", "'ARRAY'", "'BEGIN'", "'BOOLEAN'", "'CASE'", 
			"'CHAR'", "'CHR'", "'CONST'", "'CONSTRUCTOR'", "'CLASS'", "'DESTRUCTOR'", 
			"'DIV'", "'DO'", "'DOWNTO'", "'ELSE'", "'END'", "'FILE'", "'FOR'", "'FUNCTION'", 
			"'GOTO'", "'IF'", "'IN'", "'INTEGER'", "'LABEL'", "'MOD'", "'NIL'", "'NOT'", 
			"'OF'", "'OR'", "'PACKED'", "'PROCEDURE'", "'PROGRAM'", "'PRIVATE'", 
			"'PROTECTED'", "'PUBLIC'", "'PUBLISHED'", "'REAL'", "'RECORD'", "'REPEAT'", 
			"'SEALED'", "'SET'", "'THEN'", "'TO'", "'TYPE'", "'UNTIL'", "'VAR'", 
			"'WHILE'", "'WITH'", "'+'", "'-'", "'*'", "'/'", "':='", "','", "';'", 
			"':'", "'='", "'<>'", "'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", 
			"'(.'", "']'", "'.)'", "'^'", "'@'", "'.'", "'..'", "'{'", "'}'", "'UNIT'", 
			"'INTERFACE'", "'USES'", "'STRING'", "'IMPLEMENTATION'", "'TRUE'", "'FALSE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ABSTRACT", "AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE", "CHAR", 
			"CHR", "CONST", "CONSTRUCTOR", "CLASS", "DESTRUCTOR", "DIV", "DO", "DOWNTO", 
			"ELSE", "END", "FILE", "FOR", "FUNCTION", "GOTO", "IF", "IN", "INTEGER", 
			"LABEL", "MOD", "NIL", "NOT", "OF", "OR", "PACKED", "PROCEDURE", "PROGRAM", 
			"PRIVATE", "PROTECTED", "PUBLIC", "PUBLISHED", "REAL", "RECORD", "REPEAT", 
			"SEALED", "SET", "THEN", "TO", "TYPE", "UNTIL", "VAR", "WHILE", "WITH", 
			"PLUS", "MINUS", "STAR", "SLASH", "ASSIGN", "COMMA", "SEMI", "COLON", 
			"EQUAL", "NOT_EQUAL", "LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACK", 
			"LBRACK2", "RBRACK", "RBRACK2", "POINTER", "AT", "DOT", "DOTDOT", "LCURLY", 
			"RCURLY", "UNIT", "INTERFACE", "USES", "STRING", "IMPLEMENTATION", "TRUE", 
			"FALSE", "WS", "COMMENT_1", "COMMENT_2", "IDENT", "STRING_LITERAL", "NUM_INT", 
			"NUM_REAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DelphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public TopLevelBlockContext topLevelBlock() {
			return getRuleContext(TopLevelBlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(DelphiParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(DelphiParser.EOF, 0); }
		public TerminalNode INTERFACE() { return getToken(DelphiParser.INTERFACE, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(238);
			programHeading();
			setState(240);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERFACE) {
				{
				setState(239);
				match(INTERFACE);
				}
			}

			setState(242);
			topLevelBlock();
			setState(243);
			match(DOT);
			setState(244);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(DelphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(DelphiParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(DelphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(DelphiParser.RPAREN, 0); }
		public TerminalNode UNIT() { return getToken(DelphiParser.UNIT, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitProgramHeading(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitProgramHeading(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			setState(260);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROGRAM:
				enterOuterAlt(_localctx, 1);
				{
				setState(246);
				match(PROGRAM);
				setState(247);
				identifier();
				setState(252);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(248);
					match(LPAREN);
					setState(249);
					identifierList();
					setState(250);
					match(RPAREN);
					}
				}

				setState(254);
				match(SEMI);
				}
				break;
			case UNIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(256);
				match(UNIT);
				setState(257);
				identifier();
				setState(258);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(DelphiParser.IDENT, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DelphiListener ) ((DelphiListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DelphiVisitor ) return ((DelphiVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(262);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
